tests/compilefail67.out
[1mtests/compilefail67.pas:10:10: [0m[1m[91merror:[0m Invalid Token: '['
    10 | 	myq[4[3] := true;